Wrong path in ShowSummary call

--- a/html/SideBySideView/Ticket/Display.html
+++ b/html/SideBySideView/Ticket/Display.html
@@ -65,7 +65,7 @@
 % $m->callback( %ARGS, Ticket => $TicketObj, CallbackName => 'BeforeShowSummary' );
 <div class="summary">
 <&| /Widgets/TitleBox, title => loc('Ticket metadata') &>
-<& /Ticket/Elements/ShowSummary,  Ticket => $TicketObj, Attachments => $attachments &>
+<& Elements/ShowSummary,  Ticket => $TicketObj, Attachments => $attachments &>
 </&>
 </div>
 <br />
